syntax = "proto3";

package Proto.Command;

service CommandService {
  rpc SendCommand (CreateTicketCommand) returns (CommandResponse);
}

message CreateTicketCommand {
  string ticketId = 1;
  string name = 2;
  string bookingNumber = 3;
  repeated string sprintIds = 4;
}

message CommandResponse {
  bool success = 1;
}